css/styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    font-family: Arial, sans-serif;
}

body {
    width: 100vw;
    height: 100vh;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    text-align: center;
}


header {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    flex: 2 1 auto;
    padding: 20px;

    background-color: lightslategrey;
}

button {
    background-color: silver;
    font-size: 20px;
    padding: 10px;
    width: 200px;
}

.learn-btn {
    margin-top: 20px;
}

main {
    background-image: linear-gradient(180deg, lightslategrey, black );

    flex: 4 1 auto;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
}

/* find out why <main> doesn't work */

footer {
    flex: 1 1 auto;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 18px;

    background-color: black;
}

.nav-bar {
    flex: 1 1 auto;
    display: flex;
    justify-content: stretch;
    align-items: center;
    flex-direction: row;
    padding: 10px;

    background-color: lightslategrey;
}

.nav-links {
    flex: 1 1 auto;
    list-style: none;
    font-size: 20px;

    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 50px;

}


a {
    text-decoration: none;
    color: black;
}

.logo {
    flex: 1 1 auto;

    display: flex;
    justify-content: center;
    font-size: 20px;
    font-weight: bold;
}

.introduction {
    font-size: 20px;
    display: flex;
    align-self: center;
    gap: 20px;
}

.introduction-text {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

.beginning {
    font-size: 48px;
}

.geralt {
    width: 400px;
    height: 200px;
    object-fit: fill;
    border: 3px solid silver;
    border-radius: 5px;
}

.school {
    color: silver;
    font-size: 20px;
}

.schools {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    flex: 4 1 auto;
    gap: 20px;
    /* flex-wrap: wrap; */
    /* flex-wrap doesn't work  */

    max-width: 1600px;
    padding: 20px;
    /* background-color: rgba(100, 0, 0, 0.5); */
}

.medallion {

    /* background-color: brown; */
    width: 200px;
    height: 200px;
    object-fit: contain;
}

.page-title {
    font-size: 48px;
    color: black;
}

.wolf {
    order: 3;
    align-self: flex-end;
    height: 100%;

    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    /* background-color: lightpink; */
}

.cat {
    order: 2;
    align-self: center;
}

.griffin {
    order: 4;
    align-self: center;
}

.viper {
    order: 1;
    align-self: flex-start;
}

.bear {
    order: 5;
    align-self: flex-start;
}

.citation {
    color: silver;
    background-color: rgb(48,48,48);
    padding: 20px;
    border: 2px solid silver;
    border-radius: 5px;
}

.citation span {
    font-size: 22px;
}

